fix navigation and layout on mobile
using javascript for navigation and media screen for responsive design

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
-nav{
+/* navigation */
+.navigation{
     display: flex;
     flex-direction: row;
     padding: 4px;
@@ -8,8 +9,42 @@ nav{
     width: 100%;
     z-index: 20;
     transition: all 0.5s;
-    background-color: #f7f7f7;
+    background-color: #FDF7E4;
 }
+
+.mobile-nav {
+    display: none;
+    overflow: hidden;
+    background-color: #FDF7E4;
+    position: relative;
+    padding-left: 20px;
+}
+  
+.mobile-nav #myLinks {
+    display: none;
+}
+  
+.mobile-nav a {
+    color: black;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+  
+.mobile-nav a.icon {
+    color: black;
+    display: block;
+    font-size: 34px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+  
+.mobile-nav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 
 .title{
     color: black;
@@ -30,32 +65,69 @@ nav{
     font-weight: bold;
 }
 
+/* content */
+h3 {
+    text-align: center;
+}
+
 main{
     padding: 60px 15px 10px 15px;
 }
 
-.home{
-    display: inline;
-    text-align: center;
-}
 .wellcome{
-    font-size: 25px;
     background-image: url("./image/background.jpg");
+    background-size: cover; 
+    background-position: center;
+    font-size: 30px;
     text-align: center;
     width: 100%;
     height: auto;
     padding-top: 100px;
     padding-bottom: 100px;
-    color: salmon;
-    text-shadow: 2rem;
+    color: #FDF7E4;
+}
+
+.wellcome h2, p {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.btn {
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Georgia;
+    color: #080808;
+    
+    background: #FAEED1;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btn-hero {
+    font-size: 20px;
+}
+
+.btn-small {
+    font-size: 14px;
+    margin-left: 25px;
+}
+
+.btn-rm {
+    font-size: 14px;
+} 
+
+.btn:hover {
+    background: #BBAB8C;
+    text-decoration: none;
 }
 
 .content {
-    
+    padding-top: 60px;
     width: 75%;
 }
 
-.content h3 {
+.content h2 {
     text-align: center;
     margin-top: 25px;
 }
@@ -63,7 +135,7 @@ main{
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 1px;
-    padding: 20px;
+    padding: 5px;
     margin-top: 60px;
     margin-bottom: 20px;
 }
@@ -98,6 +170,7 @@ aside {
     float: right;
     width: 25%;
     padding-left: 20px;
+    padding-top: 60px;
     object-position: center;
     text-align: center;
 }
@@ -108,13 +181,14 @@ aside img{
 }
 
 footer{
-    background-color: lightslategray;
+    background-color: #BBAB8C;
     position: relative;
-    color: antiquewhite;
+    color: #FDF7E4;
     text-align: center;
-    padding: 4px;
+    padding: 10px;
 }
 
+/* responsive */
 @media screen and (max-width: 1025px) {
     .list-box{
         width: 80%;
@@ -122,6 +196,30 @@ footer{
 }
 
 @media screen and (max-width: 720px) {
+    .navigation{
+        display: grid;
+    }
+    .mobile-nav{
+        display: block;
+        overflow: visible;
+    }
+
+    .nav-item{
+        display: none;
+    }
+
+    .title{
+        display: none;
+    }
+
+    .card {
+        margin-top: 100px;
+    }
+
+    .wellcome{
+        font-size: 20px;
+    }
+
     aside{
         float: none;
         width: 100%;
